# fit

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  example.c  example_config.yml  example_csv.csv  example_experiment.csv  fit.html  fit.interfaces.gdb.html  fit.interfaces.html  flake.nix  genindex.html  index.html  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  fit.doctree  fit.interfaces.doctree  fit.interfaces.gdb.doctree  index.doctree  modules.doctree
.github/workflows/: gh-pages.yml
_modules/: index.html
_modules/fit/: csv.html  distribution.html  elf.html  fitlib.html  injector.html  logger.html  mapping.html  memory.html  stencil.html
_modules/fit/interfaces/: implementations.html  internal_injector.html
_modules/fit/interfaces/gdb/: boards.html  controller.html  gdb_injector.html
_sources/: fit.interfaces.rst.txt  index.rst.txt
configurable_fit/: config.yml  configurable_main.py  example_csv.csv
docs/source/: conf.py  modules.rst
fit/: __init__.py  csv.py  distribution.py  elf.py  fit.py  fitlib.py  injector.py  logger.py  main.py  mapping.py  memory.py  stencil.py
fit/interfaces/: implementations.py  injector.py  internal_injector.py
fit/interfaces/gdb/: ]  boards.py  controller.py  gdb_injector.py
tests/: Makefile  test_gdb.py  test_injector.py
tests/testbench/: read_write.c  timeout.c
