[project]
name = "fit"
version = "0.1.0"
description = ""
authors = [
    {name = "sbancuz",email = "sbancuz@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygdbmi (>=0.11.0.0,<0.12.0.0)",
    "lief (>=0.16.4,<0.17.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
