[project]
name = "fit"
version = "0.1.0"
description = ""
authors = [
    {name = "sbancuz",email = "sbancuz@protonmail.com"},
    {name = "AlessandroConti11",email = "alessandro11.conti@mail.polimi.it"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygdbmi (>=0.11.0.0,<0.12.0.0)",
    "lief (>=0.16.4,<0.17.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "click (>=8.1.8,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
fit = "main:main"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.8"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
types-pyyaml = "^6.0.12.20250402"
sphinx = "^7.2.6"
sphinx-autodoc-typehints = "^1.25.2"
myst-parser = "^2.0.0"                
# furo = "^2024.1.29"                    
sphinx-rtd-theme = "^3.0.2"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "W", "C90"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

